--- a/README.rdoc
+++ b/README.rdoc
@@ -259,3 +259,4 @@ vendor
   External libraries that the application depends on. Also includes the plugins
   subdirectory. If the app has frozen rails, those gems also go here, under
   vendor/rails/. This directory is in the load path.
+![codefish status](https://www.codeship.io/projects/d2042db0-4aec-0131-64d4-5e32a0a8b5de/status)
